# shin

./: Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
python/shin/: __init__.py  shin.pyi
src/: lib.rs
tests/: test_shin.py
typesafety/: test_shin.yml
