[package]
name = "shin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "shin"
crate-type = ["cdylib"]

[dependencies]
argmin = "0.9.0"
pyo3 = { version = "0.16.5", features = ["extension-module"] }

[dev-dependencies]
approx = "0.5.1"

[package.metadata.maturin]
python-source = "python"
